--- a/styles.css
+++ b/styles.css
@@ -842,7 +842,7 @@ p {
 
 /* خلفية الصفحة الرئيسية */
 .role-selection {
-  background: #f8f5f2 url('https://images.unsplash.com/photo-1605497788044-5a32c7078486?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center;
+  background: #f8f5f2 url('https://www.google.com/imgres?q=%D8%B5%D9%88%D8%B1%D9%87%20%D8%AD%D9%84%D8%A7%D9%82%20%D8%B5%D9%88%D8%B1%20%D9%85%D8%AC%D8%A7%D9%86%D9%8A%D9%87&imgurl=https%3A%2F%2Fimg.lovepik.com%2Fpng%2F20230929%2F1998-barber-shop-scissors-decorative-elements-decoration-cartoon-scissors_19059_wh1200.png&imgrefurl=https%3A%2F%2Fsa.lovepik.com%2Fimages%2Fpng-barber-shop.html&docid=5TdBwAAqKAuN1M&tbnid=ksQ-rc33iebpeM&vet=12ahUKEwjEsOW-pNCOAxVWdqQEHbxsKHAQM3oECBoQAA..i&w=1200&h=1200&hcb=2&ved=2ahUKEwjEsOW-pNCOAxVWdqQEHbxsKHAQM3oECBoQAA') no-repeat center center;
   background-size: cover;
 }
 
